# signal-rust

./: .gitignore  Cargo.toml  README.md
src/: channel.rs  lib.rs  signal.rs
