[package]
name = "signal-simple"
version = "0.1.0"
authors = ["Michael Micucci <micucci@fox-den.org>"]
description = "Library to handle and send system signals"
repository = "http://github.com/kitsuneninetails/signal-rust"
license = "MIT"
readme = "README.md"
keywords = ["signal", "kill", "signal-handling"]


[dependencies]
libc = "0.2"

[dev-dependencies]
lazy_static = "1.2"
